# celix

./: .travis.yml  CMakeLists.txt  Diagram1.xml  report.md
bundles/: CMakeLists.txt
bundles/pubsub/: CMakeLists.txt
bundles/pubsub/mock/: CMakeLists.txt
bundles/pubsub/test/: CMakeLists.txt
bundles/remote_services/remote_service_admin_dfi/: CMakeLists.txt
bundles/remote_services/remote_service_admin_shm/private/test/: rsa_client_server_tests.cpp
bundles/remote_services/topology_manager/: CMakeLists.txt
bundles/shell/: CMakeLists.txt
bundles/shell/cxx_shell/: CMakeLists.txt
bundles/shell/cxx_shell/gtest/: CMakeLists.txt
bundles/shell/cxx_shell/include/celix/: IShell.h  IShellCommand.h
bundles/shell/cxx_shell/src/: HelpCommand.cc  InspectCommand.cc  LbCommand.cc  QueryCommand.cc  ShellActivator.cc  StopAndStartCommand.cc  commands.h
bundles/shell/cxx_shell_tui/: CMakeLists.txt
bundles/shell/cxx_shell_tui/gtest/: CMakeLists.txt
bundles/shell/cxx_shell_tui/src/: ShellTuiActivator.cc  shell_test.cc
bundles/shell/shell_bonjour/: CMakeLists.txt
cmake/: FindGmock.cmake
cmake/celix_project/: AddCppUTest.cmake  AddGLog.cmake  AddGTest.cmake  AddLibzip.cmake  CodeCoverage.cmake
examples/celix-examples/: CMakeLists.txt
examples/celix-examples/cxx_shell_example/: CMakeLists.txt
examples/celix-examples/shell_command_example/: CMakeLists.txt
framework/: CMakeLists.txt
framework/private/mock/: celix_log_gmock.h
framework/private/test/: filter_gtest.cpp  thing_test.cpp
libs/: CMakeLists.txt
libs/dfi/: CMakeLists.txt
libs/framework/: CMakeLists.txt
libs/framework/include/celix/dm/: Properties.h
libs/framework/src/: bundle_archive.c  bundle_context.c.orig
libs/framework/tst/: CMakeLists.txt
libs/framework_cxx/: CMakeLists.txt
libs/framework_cxx/gtest/: CMakeLists.txt
libs/framework_cxx/gtest/src/: Framework_tests.cc
libs/framework_cxx/include/celix/: BundleContext.h  Framework.h  IBundle.h  IBundleActivator.h  IBundleContext.h  api.h
libs/framework_cxx/src/: Bundle.cc  Bundle.h  BundleContext.cc  BundleController.h  BundleImpl.h  Framework.cc
libs/registry/: CMakeLists.txt
libs/registry/gtest/: CMakeLists.txt
libs/registry/gtest/src/: Filter_tests.cc  RegistryConcurrency_tests.cc  Registry_tests.cc  ServiceTracking_tests.cc  Utils_tests.cc
libs/registry/include/celix/: Constants.h  Filter.h  IResourceBundle.h  Properties.h  ServiceRegistry.h  Utils.h
libs/registry/src/: Filter.cc  ServiceRegistry.cc  Utils.cc
libs/utils/: CMakeLists.txt
